--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="./page/talks.html">TALKS</a></li>
                 <li><a href="./page/about.html">ABOUT</a></li>
                 <li><a href="./page/archives.html">ARCHIVES</a></li>
-                <li><a href="./page/tag.html">TAGS</a></li>
+                <li><a href="./recommend.html">RECOMMEND</a></li>
                 <li><a href="./page/photoalbums.html">PHOTOALBUMS</a></li>
             </ul>
         </nav>
